--- a/ticket-system/pom.xml
+++ b/ticket-system/pom.xml
@@ -20,5 +20,11 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.31</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>3.3.2.GA</version>
+        </dependency>
+
     </dependencies>
 </project>
