--- a/ticket-system/pom.xml
+++ b/ticket-system/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
-            <version>3.3.2.GA</version>
+            <version>4.2.0.Final</version>
         </dependency>
 
     </dependencies>
