--- a/ticket-system/pom.xml
+++ b/ticket-system/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>hibernate-entitymanager</artifactId>
             <version>4.2.0.Final</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
+
 
     </dependencies>
 </project>
