Try to use tiles

--- a/ticket-system-web/pom.xml
+++ b/ticket-system-web/pom.xml
@@ -148,6 +148,23 @@
             <version>1.7.7</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-core</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-jsp</artifactId>
+            <version>3.0.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-api</artifactId>
+            <version>3.0.4</version>
+        </dependency>
 
     </dependencies>
 
