--- a/ticket-system-web/pom.xml
+++ b/ticket-system-web/pom.xml
@@ -195,6 +195,11 @@
             <artifactId>jackson-annotations</artifactId>
             <version>2.2.2</version>
         </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.3</version>
+        </dependency>
 
     </dependencies>
 
