--- a/ticket-system-web/src/main/webapp/WEB-INF/web.xml
+++ b/ticket-system-web/src/main/webapp/WEB-INF/web.xml
@@ -49,6 +49,15 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <error-page>
+        <error-code>400</error-code>
+        <location>/WEB-INF/pages/msg.jsp</location>
+    </error-page>
+    <error-page>
+        <error-code>404</error-code>
+        <location>/error/404</location>
+    </error-page>
+
 
 
 </web-app>
